# datapress

./: .datasets.toml.swp  .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUERY.md  README.md  SECURITY.md  TEST_Q.md  TODO.md  TROUBLESHOOTING.md  Taskfile.yml  cliff.toml  datasets.toml  example.py  fast-api.py  install-cli.ps1  install-cli.sh  install.ps1  install.sh  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish-clients.yml  publish.yml  static-linux.yml
crates/client/: Cargo.toml  README.md
crates/client-cli/: Cargo.toml  README.md
crates/client-cli/src/: main.rs
crates/client-py/: Cargo.toml  README.md  pyproject.toml
crates/client-py/python/datap_rs_client/: __init__.py  _datapress_client.pyi
crates/client-py/src/: lib.rs
crates/client/src/: blocking.rs  client.rs  error.rs  lib.rs  models.rs
crates/core/: Cargo.toml  README.md  build.rs
crates/core/assets/explorer/: explorer.css  explorer.js  query-api.js  terminal.css  terminal.js
crates/core/src/: admin.rs  auth.rs  backend.rs  banner.rs  config.rs  docs.rs  duckdb_vendor.rs  errors.rs  explorer.rs  handlers.rs  lib.rs  models.rs  schema.rs  server.rs  sql.rs  swagger.rs  timeout.rs
crates/core/src/handlers/: mod.rs  v1.rs
crates/core/templates/explorer/: base.html  dataset.html  index.html  terminal.html
crates/core/tests/: handlers.rs
crates/datafusion/: Cargo.toml  README.md
crates/datafusion/benches/: RESULTS.md  index.rs  serialize.rs
crates/datafusion/src/: handlers.rs  lib.rs  store.rs
crates/datafusion/tests/: end_to_end.rs
crates/datapress/: Cargo.toml  README.md
crates/datapress/src/: main.rs
crates/datapress/templates/: datasets.toml.template
crates/duckdb/: Cargo.toml  README.md
crates/duckdb/src/: db.rs  handlers.rs  lib.rs  repository.rs
crates/duckdb/tests/: end_to_end.rs
crates/python/: Cargo.toml  README.md
crates/python/python/datap_rs/: __init__.py  __init__.pyi  client.py  client.pyi  datapress.pyi
crates/python/python/datapress/: __init__.py  __init__.pyi
crates/python/src/: lib.rs
demo/client/: README.md  index.html  main.py  pyproject.toml
demo/client/static/: app.css  shell.js
demo/client/templates/: index.html
demo/client/templates/partials/: datasets.html
docs/: mkdocs.yml
docs/docs/site/: 404.html  index.html  sitemap.xml
docs/docs/site/backends/: index.html
docs/docs/site/backends/comparison/: index.html
docs/docs/site/backends/datafusion/: index.html
docs/docs/site/backends/duckdb/: index.html
docs/docs/site/configuration/: index.html
docs/docs/site/configuration/datasets/: index.html
docs/docs/site/configuration/docs-site/: index.html
docs/docs/site/configuration/indexing/: index.html
docs/docs/site/configuration/s3/: index.html
docs/docs/site/configuration/server/: index.html
docs/docs/site/getting-started/: index.html
docs/docs/site/getting-started/first-server/: index.html
docs/docs/site/getting-started/install/: index.html
docs/docs/site/getting-started/quick-tour/: index.html
docs/docs/site/operations/: index.html
docs/docs/site/operations/auth/: index.html
docs/docs/site/operations/graceful-shutdown/: index.html
docs/docs/site/operations/logging/: index.html
docs/docs/site/operations/metrics/: index.html
docs/docs/site/operations/probes/: index.html
docs/docs/site/python/: index.html
docs/docs/site/python/client/: index.html
docs/docs/site/python/config/: index.html
docs/docs/site/python/examples/: index.html
docs/docs/site/python/server/: index.html
docs/docs/site/query/: index.html
docs/docs/site/query/arrow-ipc/: index.html
docs/docs/site/query/count/: index.html
docs/docs/site/query/distinct/: index.html
docs/docs/site/query/grouping/: index.html
docs/docs/site/query/predicates/: index.html
docs/docs/site/query/projection/: index.html
docs/docs/site/query/recipes/: index.html
docs/docs/site/query/request-body/: index.html
docs/docs/site/query/sorting/: index.html
docs/docs/site/reference/: index.html
docs/docs/site/reference/changelog/: index.html
docs/docs/site/reference/endpoints/: index.html
docs/docs/site/reference/errors/: index.html
docs/docs/site/search/: search_index.json
docs/overrides/: main.html
docs/overrides/partials/: source.html
docs/scripts/: bundle-duckdb.mjs
docs/src/: CNAME  index.md  robots.txt
docs/src/assets/: duckdb-terminal.html
docs/src/assets/javascripts/: duckdb-shell.js  mermaid-zoom.js
docs/src/assets/stylesheets/: extra.css
docs/src/backends/: comparison.md  datafusion.md  duckdb.md  index.md
docs/src/clients/: cli.md  index.md  python.md  rust.md
docs/src/configuration/: datasets.md  docs-site.md  index.md  indexing.md  s3.md  server.md
docs/src/getting-started/: duckdb-wasm.md  first-server.md  index.md  install.md  quick-tour.md
docs/src/operations/: auth.md  graceful-shutdown.md  index.md  logging.md  metrics.md  probes.md  reload.md  troubleshooting.md
docs/src/python/: client.md  config.md  examples.md  index.md  server.md
docs/src/query/: arrow-ipc.md  count.md  distinct.md  grouping.md  index.md  predicates.md  projection.md  recipes.md  request-body.md  sorting.md  sql.md
docs/src/reference/: changelog.md  endpoints.md  errors.md  index.md
docs/src/resources/: index.md
examples/keycloak/: README.md  docker-compose.yml  realm-datapress.json
packaging/: README.md
packaging/docker/: Dockerfile  datasets.example.toml
packaging/homebrew/: datapress.rb  update-formula.sh
src/: admin.rs  config.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  repository.rs  store.rs
src/datafusion_backend/: handlers.rs  store.rs
src/duckdb_backend/: db.rs  handlers.rs  mod.rs  repository.rs  schema.rs
