[workspace]
resolver = "3"
members  = [
    "crates/core",
    "crates/duckdb",
    "crates/datafusion",
    "crates/datapress",
    "crates/python",
]

[workspace.package]
version = "0.4.5"
edition = "2024"
license = "MIT"
authors = ["Jeroen <jeroenflvr@users.noreply.github.com>"]
repository = "https://github.com/jeroenflvr/datapress"
homepage = "https://github.com/jeroenflvr/datapress"
documentation = "https://docs.datap-rs.org"
keywords = ["parquet", "delta", "duckdb", "datafusion", "http"]
categories = ["database", "web-programming::http-server"]

[workspace.dependencies]
# Internal crates (path deps). Versions are required so the crates can be
# published to crates.io while still resolving to the local path in-tree.
datapress-core       = { path = "crates/core", version = "0.4.5" }
datapress-duckdb     = { path = "crates/duckdb", version = "0.4.5" }
datapress-datafusion = { path = "crates/datafusion", version = "0.4.5" }

# Shared third-party deps. Pinning versions here keeps every crate aligned.
actix-web   = { version = "4.12.1", features = ["compress-gzip", "compress-brotli", "compress-zstd"] }
async-trait = "0.1"
bytes       = "1"
futures-util = "0.3"
tokio       = { version = "1.52.3", features = ["full"] }
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log        = "0.4"
toml       = "1.1.2"
clap       = { version = "4.5", features = ["derive"] }

arrow      = "58"
parquet    = { version = "58", features = ["arrow"] }
datafusion = "53"
duckdb     = { version = "1.10503.0", features = ["bundled"] }
rayon      = "1.12.0"
itoa       = "1.0.18"
ryu        = "1.0.23"
ahash      = "0.8"
arc-swap   = "1.9.1"
# SQL parser for the raw-SQL endpoint's shared safety gate. Pinned to the
# version DataFusion 53 resolves to so the AST types stay in lock-step.
sqlparser  = { version = "0.61", features = ["visitor"] }
object_store = { version = "0.13", features = ["aws"] }
url          = "2"
deltalake    = { version = "0.32", features = ["datafusion", "s3"] }
glob         = "0.3"

pyo3                = { version = "0.28.3", features = ["extension-module", "abi3-py39"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }

# OpenAPI + Swagger UI (feature-gated via `swagger` on datapress-core).
utoipa              = "5.5.0"
utoipa-swagger-ui   = { version = "9.0.2", features = ["actix-web"] }

# Prometheus metrics middleware (feature-gated via `metrics` on datapress-core).
actix-web-prom      = "0.10"

# OIDC / OAuth2 enforcement (feature-gated via `auth` on datapress-core).
jsonwebtoken        = "10"
reqwest             = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Embedded explorer UI templating (feature-gated via `explorer` on datapress-core).
askama              = "0.12"

[profile.release]
opt-level     = 3
# Fat LTO + codegen-units = 1 OOM-kills rustc when cross-building the
# aarch64 wheel under QEMU on GitHub-hosted runners. Thin LTO retains
# almost all of the runtime benefit at a fraction of the link-time RAM.
lto           = "thin"
codegen-units = 16
