[build-system]
requires      = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name            = "datap-rs-client"
description     = "Python client for a DataPress dataset server, backed by the native Rust client (datapress-client)."
readme          = "README.md"
requires-python = ">=3.9"
dynamic         = ["version"]
license         = { text = "MIT" }
keywords        = ["parquet", "duckdb", "datafusion", "http", "api", "arrow", "client"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: HTTP Clients",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
# Enables `query_arrow(...)` decoding into a `pyarrow.Table`.
arrow = ["pyarrow>=14"]

[project.urls]
Homepage      = "https://docs.datap-rs.org"
Documentation = "https://docs.datap-rs.org"
Source        = "https://github.com/jeroenflvr/datapress"
Issues        = "https://github.com/jeroenflvr/datapress/issues"

[tool.maturin]
# The Cargo package lives next to this file; the cdylib is exposed as the
# private `datap_rs_client._datapress_client` submodule, wrapped by the
# pure-Python `datap_rs_client` package.
manifest-path = "Cargo.toml"
module-name   = "datap_rs_client._datapress_client"
bindings      = "pyo3"
features      = ["pyo3/extension-module"]
python-source = "python"
strip         = true
include       = [
    { path = "README.md", format = "sdist" },
]
