[package]
name             = "datapress-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Backend crates opt in to these via `features = [...]` on their
# `datapress-core` dep. They pull in the optional deps used by the
# backend-specific `From` impls in `errors.rs`.
duckdb     = ["dep:duckdb"]
datafusion = ["dep:arrow", "dep:parquet", "dep:datafusion"]
# Embed the MkDocs Material documentation site into the binary and
# serve it from the configured `[docs].path`. Off by default to keep
# binaries small.
docs       = ["dep:include_dir", "dep:mime_guess"]
# Embed Swagger UI + a hand-written OpenAPI spec. Served from
# `[swagger].path` (default `/docs`). Off by default at compile time;
# can be disabled at runtime via `[swagger].enabled = false`.
swagger    = ["dep:utoipa", "dep:utoipa-swagger-ui"]

[dependencies]
actix-web.workspace   = true
async-trait.workspace = true
serde.workspace       = true
serde_json.workspace  = true
log.workspace         = true
toml.workspace        = true
glob.workspace        = true
tokio.workspace       = true

# Optional, feature-gated (see [features] above).
duckdb     = { workspace = true, optional = true }
arrow      = { workspace = true, optional = true }
parquet    = { workspace = true, optional = true }
datafusion = { workspace = true, optional = true }
include_dir = { version = "0.7", optional = true }
mime_guess  = { version = "2",   optional = true }
utoipa            = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }

[dev-dependencies]
arrow = { workspace = true }
actix-rt = "2"
