[package]
name             = "datapress-duckdb"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
datapress-core = { workspace = true, features = ["duckdb"] }

actix-web.workspace  = true
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
log.workspace        = true
env_logger.workspace = true

duckdb.workspace = true

[[bin]]
name = "datapress-duckdb"
path = "src/bin/datapress-duckdb.rs"
