[package]
name             = "datapress-duckdb"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "DuckDB-backed implementation of the datapress Parquet/Delta dataset HTTP server."
documentation = "https://docs.rs/datapress-duckdb"
readme = "README.md"

[features]
default = []
docs    = ["datapress-core/docs"]
swagger = ["datapress-core/swagger"]
metrics = ["datapress-core/metrics"]
auth    = ["datapress-core/auth"]

[dependencies]
datapress-core = { workspace = true, features = ["duckdb"] }

actix-web.workspace   = true
async-trait.workspace = true
tokio.workspace       = true
serde.workspace       = true
serde_json.workspace  = true
log.workspace         = true
env_logger.workspace  = true

duckdb.workspace = true
arrow.workspace  = true

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "datapress-duckdb"
path = "src/bin/datapress-duckdb.rs"
