[package]
name             = "datapress-py"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
# Python submodule name: `datap_rs.datapress`. The cdylib basename must
# match the rightmost path component of `module-name` in pyproject.toml,
# so the .so file ends up at `datap_rs/datapress.abi3.so` inside the wheel.
name       = "datapress"
crate-type = ["cdylib"]

[dependencies]
datapress-core       = { workspace = true, features = ["duckdb", "datafusion"] }
datapress-duckdb.workspace     = true
datapress-datafusion.workspace = true

pyo3.workspace                = true
pyo3-async-runtimes.workspace = true

# We start an actix runtime in a dedicated thread inside `DataPress.run()`.
actix-web.workspace  = true
tokio.workspace      = true
log.workspace        = true
env_logger.workspace = true
