[project]
name = "client"
version = "0.1.0"
description = "DuckDB-WASM shell client (FastAPI + htmx + Jinja2 + Bootstrap)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.39.0",
]

[project.scripts]
client = "main:main"

